<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version">Version 1.0.1</string>
    <string name="app_name">Cardify</string>
    <string name="action_settings">Settings</string>
    <string name="set_name">Name of new flashcard set:</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="my_flashcards">My Flashcards</string>
    <string name="delete_all">Delete all</string>
    <string name="confirm_delete_all">Delete all items?</string>
    <string name="confirm_delete_selected">Delete selected items?</string>
    <string name="donate_button">Donate</string>
    <string name="dismiss">Dismiss</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="card_word">Word:</string>
    <string name="card_definition">Definition:</string>
    <string name="set_word">Word (front):</string>
    <string name="set_definition">Definition (back):</string>
    <string name="flip_card">Flip Card</string>
    <string name="next_card">Next</string>
    <string name="previous_card">Back</string>
    <string name="edit">Edit</string>
    <string name="edit_word">Edit Word</string>
    <string name="out_of_cards">No more cards left in this set</string>
    <string name="new_word">New word:</string>
    <string name="current_word">Current word:</string>
    <string name="current_definition">Current definition:</string>
    <string name="new_definition">New definition:</string>
    <string name="add_set">Add set of flashcards</string>
    <string name="delete">Delete</string>
    <string name="add_card">Add a card</string>
    <string name="save">Save</string>
    <string name="select_items">Select items</string>
    <string name="welcome">Welcome to Cardify!</string>
    <string name="card_is_empty">A field cannot be blank.  Please try again.</string>
    <string name="shuffle_sets">Shuffle card sets</string>
    <string name="shuffle_cards">Shuffle cards</string>
    <string name="sort_alphabetically">Sort alphabetically</string>
    <string name="search">Search</string>
    <string name="no_results">No search results found for:</string>
    <string name="pref_animation_speed">Animation Speed</string>
    <string name="pref_anim_flip_speed">Card flip animation speed</string>
    <string name="pref_anim_slide_speed">Card slide animation speed</string>
    <string name="pref_anim_flip_speed_summ">Speed of animation when card is flipped, in milliseconds</string>
    <string name="pref_anim_slide_speed_summ">Speed of animation when card transitions to next/previous card, in milliseconds</string>
    <string name="pref_app_theme">App Theme</string>
    <string name="share">Share</string>
    <string name="pref_app_theme_detail">Change the theme of the application (Requires app restart)</string>
    <string name="share_ending">Made using Cardify, available on Google Play.</string>
    <string name="share_intro">I made a flashcard from my Android phone today!</string>
    <string name="share_options">Share flashcard with</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="preview">Preview</string>
    <string name="save_cards">Save to storage</string>
    <string name="pref_about_app">About app</string>
    <string name="save_to_storage">The selected flashcard sets will be saved to text files your phone\'s storage.</string>
    <string name="cards_saved">The selected flashcard sets have been saved to the folder Cardify on your internal storage.</string>
    <string name="storage_not_available">Internal storage is not available right now.</string>
    <string name="app_developer">Developers</string>
    <string name="app_contributor">Contributors</string>
    <string name="klin1344">Kevin Lin (klin1344)</string>
    <string name="klin1344_tasks">Programming, design, publication</string>
    <string name="rohan_patel">Rohan Patel</string>
    <string name="rohan_patel_tasks">Icon design, beta testing</string>
    <string name="donate">Thank you for downloading Cardify!  I hope you enjoy using it.  If you find a feature that has an issue or bug, please contact me via email from Google Play.  Though this is my first app and I have very limited resources to program and test, I still strive to create a quality app.  So I will try my best to work to fix any bugs that may arise.  If you would like to give me a donation to support my work, I ask that you give your donations to charity instead to help those who are less fortunate.  Thanks!           - klin1344  </string>
    <string name="cards">Cards</string>
    <string name="duplicate_set">You tried to create a duplicate card set.  Please try again.</string>
    <string name="no_sets">You do not have any flashcard sets.  Try creating some!</string>
    <string name="no_cards">You do not have any flashcards in this set.  Try creating some!</string>
    <string name="duplicate_card">You tried to create a duplicate card.  Please try again.</string>

</resources>