<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_search_sets"
        android:icon="?attr/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search"
        android:orderInCategory="1"
        android:actionViewClass="android.widget.SearchView"/>
    
    <item
        android:id="@+id/action_add_new_set"
        android:icon="?attr/ic_action_add_set"
        android:showAsAction="always"
        android:title="@string/add_set"
        android:orderInCategory="2"/>
    
    <item
        android:id="@+id/action_sort_sets_random"
        android:title="@string/shuffle_sets"
        android:showAsAction="never"
        android:orderInCategory="3"/>
    <item
        android:id="@+id/action_sort_sets_alphabetically"
        android:title="@string/sort_alphabetically"
        android:showAsAction="never"
        android:orderInCategory="4"/>

</menu>
