<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_add_new_card"
        android:showAsAction="always"
        android:title="@string/add_card"
        android:orderInCategory="2"
        android:icon="?attr/ic_action_add_card"/>
    
    <item
        android:id="@+id/action_sort_cards_random"
        android:title="@string/shuffle_cards"
        android:showAsAction="never"
        android:orderInCategory="3"/>
    
    <item
        android:id="@+id/action_sort_cards_alphabetically"
        android:title="@string/sort_alphabetically"
        android:showAsAction="never"
        android:orderInCategory="4"/>
    
    <item
        android:id="@+id/action_search_cards"
        android:icon="?attr/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search"
        android:orderInCategory="1"
        android:actionViewClass="android.widget.SearchView"/>

</menu>
